# opensearch-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  opensearch_test_direct.py  pyproject.toml  test_opensearch.py
.github/workflows/: docker-image.yml
src/opensearch_mcp_server/: __init__.py  opensearch_client.py  server.py  server_v2.py
src/opensearch_mcp_server/tools/: __init__.py  cluster.py  document.py  index.py
